+++++++++++
Python News
+++++++++++

What's New in Python 2.7.13?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #27473: Fixed possible integer overflow in str, unicode and bytearray
  concatenations and repetitions.  Based on patch by Xiang Zhang.

- Issue #23908: os functions, open() and the io.FileIO constructor now reject
  unicode paths with embedded null character on Windows instead of silently
  truncating them.

- Issue #27514: Make having too many statically nested blocks a SyntaxError
  instead of SystemError.

Library
-------

- Issue #23804: Fix SSL zero-length recv() calls to not block and not raise
  an error about unclean EOF.

- Issue #27466: Change time format returned by http.cookie.time2netscape,
  confirming the netscape cookie format and making it consistent with
  documentation.

- Issue #22115: Fixed tracing Tkinter variables: trace_vdelete() with wrong
  mode no longer break tracing, trace_vinfo() now always returns a list of
  pairs of strings.

- Issue #27079: Fixed curses.ascii functions isblank(), iscntrl() and ispunct().

- Issue #22636: Avoid shell injection problems with
  ctypes.util.find_library().

- Issue #27330: Fixed possible leaks in the ctypes module.

- Issue #27238: Got rid of bare excepts in the turtle module.  Original patch
  by Jelle Zijlstra.

- Issue #26386: Fixed ttk.TreeView selection operations with item id's
  containing spaces.

- Issue #25455: Fixed a crash in repr of cElementTree.Element with recursive tag.

IDLE
----

- Issue #27365: Allow non-ascii chars in IDLE NEWS.txt, for contributor names.

- Issue #27245: IDLE: Cleanly delete custom themes and key bindings.
  Previously, when IDLE was started from a console or by import, a cascade
  of warnings was emitted.  Patch by Serhiy Storchaka.

Documentation
-------------

- Issue #16484: Change the default PYTHONDOCS URL to "https:", and fix the